<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/menu_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_menu_detail"
                android:textColor="@color/black"
                android:fontFamily="@font/satisfy_regular"
                android:textSize="@dimen/title_size"
                android:textStyle="normal"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_map_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_detail_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="true">

                <ImageView
                    android:id="@+id/img_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/menu_img"/>

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:layout_marginHorizontal="@dimen/top_margin_alert_dialog"
                    android:background="@drawable/rounded_shape_recycler_item"
                    android:gravity="center"
                    tools:text="TITULO CARACTER DETAIL"
                    android:textColor="@color/black"
                    android:textSize="@dimen/lbl_title_dimen_medium"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_menu" />

                <TextView
                    android:id="@+id/lbl_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:layout_marginBottom="30dp"
                    android:gravity="start"
                    android:text="@string/lbl_description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/lbl_title_dimen_medium"
                    android:textStyle="bold"
                    android:fontFamily="@font/satisfy_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_name" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="@dimen/min_margin"
                    android:textColor="@color/dark_gray"
                    tools:text="Esto es una descriocion de ejemplo"
                    android:textSize="@dimen/lbl_title_dimen_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_description" />

                <TextView
                    android:id="@+id/lbl_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/inside_margin"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:layout_marginBottom="30dp"
                    android:gravity="start"
                    android:text="Ingredientes"
                    android:textColor="@color/black"
                    android:textSize="@dimen/lbl_title_dimen_medium"
                    android:textStyle="bold"
                    android:fontFamily="@font/satisfy_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_description" />

                <TextView
                    android:id="@+id/txt_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="@dimen/min_margin"
                    tools:text="Esto es una descriocion de ejemplo"
                    android:textSize="@dimen/lbl_title_dimen_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_ingredient" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_map_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_color"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/menu_map"
            android:textStyle="normal"
            android:drawableStart="@drawable/ic_location"
            android:paddingHorizontal="@dimen/inside_margin"
            android:textSize="@dimen/lbl_text_dimen_medium"
            app:layout_constraintTop_toBottomOf="@+id/nested_scroll_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </androidx.appcompat.widget.AppCompatButton>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>